[package]
name = "moon"
version = "0.1.0"
authors = ["ZeroX-DG <viethungax@gmail.com>"]
edition = "2018"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
  "components/html",
  "components/dom",
  "components/css",
  "components/io",
  "components/style",
  "components/layout",
  "components/test_utils",
  "components/painting",
  "components/ipc",
  "components/tree",
  "components/message",
  "components/url",
  "components/gfx",
  "components/loaders",
  "components/shared",
  "render",
]

[dependencies]
render = { version = "*", path = "./render" }
ipc = { version = "*", path = "./components/ipc" }
message = { version = "*", path = "./components/message" }
log = "*"
flume = "*"
clap = "*"
tokio = { version = "1.6.2", features = ["rt", "rt-multi-thread", "macros"] }
image = "*"
simplelog = "0.10.0"
