[package]
name = "moon"
version = "0.1.0"
authors = ["ZeroX-DG <viethungax@gmail.com>"]
edition = "2018"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
  "components/html",
  "components/dom",
  "components/css",
  "components/io",
  "components/style",
  "components/layout",
  "components/test_utils",
  "components/painting",
  "components/tree",
  "components/url",
  "components/gfx",
  "components/document_loader",
  "components/shared",
  "render",
]

[dependencies]
render = { version = "*", path = "./render" }
url = { path="./components/url" }
log = "*"
flume = "*"
clap = "*"
tokio = { version = "1.6.2", features = ["rt", "rt-multi-thread", "macros"] }
image = "*"
simplelog = "0.10.0"
