[package]
name = "moon"
version = "0.1.0"
authors = ["ZeroX-DG <viethungax@gmail.com>"]
edition = "2018"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
  "components/html",
  "components/dom",
  "components/css",
  "components/style",
  "components/layout",
  "components/test_utils",
  "components/painting",
  "components/tree",
  "components/url",
  "components/gfx",
  "components/net",
  "components/loader",
  "components/shared",
  "render",
  "main",
]

[dependencies]
render = { version = "*", path = "./render" }
main = { version = "*", path = "./main" }
url = { path = "./components/url" }
shared = { path = "./components/shared" }
log = "*"
flume = "*"
clap = "*"
image = "*"
simplelog = "0.10.0"
