[package]
name = "browser"
version = "0.1.0"
authors = ["ZeroX-DG <viethungax@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ipc = { version="*", path="../components/ipc" }
message = { version="*", path="../components/message" }
glium = "0.29.1"
glutin = "0.26.0"
flume = "0.10.5"
serde = { version = "*", features = ["derive"] }
log = "*"
nanoid = "0.4.0"
