[package]
name = "main"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk = "0.15.1"
url = { path = "../components/url" }
shared = { path = "../components/shared" }
render = { path = "../render" }
log = "*"
flume = { version = "0.10.11" }
