[package]
name = "main"
version = "0.1.0"
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = "0.7.0"
url = { path = "../components/url" }
shared = { path = "../components/shared" }
render = { path = "../render" }
loader = { path = "../components/loader" }
log = "*"
flume = { version = "0.10.11" }
tokio = "1.18.2"
anyhow = "1.0.57"
