[package]
name = "render"
version = "0.1.0"
authors = ["ZeroX-DG <viethungax@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
html = { version = "*", path = "../components/html" }
dom = { version = "*", path = "../components/dom" }
css = { version = "*", path = "../components/css" }
style = { version = "*", path = "../components/style" }
style_types = { path = "../components/style_types" }
layout = { version = "*", path = "../components/layout" }
painting = { version = "*", path = "../components/painting" }
shared = { version = "*", path = "../components/shared" }
gfx = { version = "*", path = "../components/gfx" }
url = { path = "../components/url" }
loader = { path = "../components/loader" }
log = "*"
flume = "0.10.12"
anyhow = "1.0.57"
tokio = "1.18.2"
html-escape = "0.2.11"
