[package]
name = "rendering"
version = "0.1.0"
authors = ["ZeroX-DG <viethungax@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
html = { version="*", path="../components/html" }
dom = { version="*", path="../components/dom" }
css = { version="*", path="../components/css" }
style = { version="*", path="../components/style" }
layout = { version="*", path="../components/layout" }
painting = { version="*", path="../components/painting" }
wgpu = "0.6"
dirs = "2.0.2"
log = "*"
shaderc = "0.7"
bytemuck = { version = "1.5.0", features = ["derive"] }
