[package]
name = "dom"
version = "0.1.0"
authors = ["ZeroX-DG <viethungax@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enum_dispatch = "0.3.7"
url = { path="../url" }
css = { path="../css" }
relative-path = "1.4.0"
log = "*"
