[package]
name = "gfx"
version = "0.1.0"
authors = ["ZeroX-DG <viethungax@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
painting = { version="*", path="../painting" }
bytemuck = { version = "1.5.0", features = ["derive"] }
lyon_tessellation = "0.17.7"
wgpu = "0.9"
wgpu_glyph = "0.13"
log = "*"
futures = "0.3.15"
ultraviolet = { version = "0.8.1", features = [ "bytemuck", "int" ] }
