[package]
name = "gfx"
version = "0.1.0"
authors = ["ZeroX-DG <viethungax@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shared = { version = "*", path = "../shared" }
bytemuck = { version = "1.5.0", features = ["derive"] }
lyon_tessellation = "0.17.7"
wgpu = "0.14"
log = "*"
futures = "0.3.15"
ultraviolet = { version = "0.8.1", features = [ "bytemuck", "int" ] }
wgpu_glyph = "0.18.0"
async-trait = "0.1.52"
glyph_brush = "0.7.3"
raqote = { version = "0.7.14", features = ["text"] }
fontdue = "0.7.3"