[package]
name = "html"
version = "0.1.0"
authors = ["ZeroX-DG <viethungax@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dom = { path = "../dom", version = "*" }
phf = { version = "0.8.0", features = ["macros"] }
io  = { path = "../io", version = "*" }
