[package]
name = "ipc"
version = "0.1.0"
authors = ["ZeroX-DG <viethungax@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
message = { version = "*", path = "../message" }
nanoid = "0.1.3"
flume = "0.9.1"
log = "*"
bincode = "1.3.1"