[package]
name = "layout"
version = "0.1.0"
authors = ["ZeroX-DG <viethungax@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
style = { version = "*", path = "../style" }
dom = { version = "*", path = "../dom" }
tree = { version = "*", path = "../tree" }
log = "*"

[dev-dependencies]
test_utils = { version = "*", path = "../test_utils" }
css = { version = "*", path = "../css" }
