[package]
name = "layout"
version = "0.1.0"
authors = ["ZeroX-DG <viethungax@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
style = { version = "*", path = "../style" }
style_types = { path = "../style_types" }
dom = { version = "*", path = "../dom" }
shared = { version = "*", path = "../shared" }
log = "*"
regex = "1"

[dev-dependencies]
test_utils = { version = "*", path = "../test_utils" }
css = { version = "*", path = "../css" }
