[package]
name = "loader"
version = "0.1.0"
authors = ["ZeroX-DG <viethungax@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
url = { path = "../url" }
net = { path = "../net" }
tokio = { version = "1.6.2", features = ["rt", "rt-multi-thread"] }
flume = "0.10.12"
