[package]
name = "message"
version = "0.1.0"
authors = ["ZeroX-DG <viethungax@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ipc = { version = "*", path = "../ipc" }
serde = { version = "*", features = ["derive"] }
bincode = "1.3.1"