[package]
name = "style"
version = "0.1.0"
authors = ["ZeroX-DG <viethungax@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
css = { version = "*", path = "../css" }
dom = { version = "*", path = "../dom" }
shared = { version = "*", path = "../shared" }
style_types = { path = "../style_types" }
log = "*"

[dev-dependencies]
test_utils = { version = "*", path = "../test_utils" }
