[package]
name = "style_types"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
css = { path = "../css" }
strum_macros = "0.19"
strum = { version = "0.19", features = ["derive"] }
log = "*"
shared = { version = "*", path = "../shared" }
