[package]
name = "test_utils"
version = "0.1.0"
authors = ["ZeroX-DG <viethungax@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dom = { version = "*", path = "../dom" }
css = { version = "*", path = "../css" }
shared = { version = "*", path = "../shared" }
